--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,3 +44,9 @@ set -g @colors-solarized '256'
 
 # tpm Init
 run '~/.tmux/plugins/tpm/tpm'
+
+# vim pane move key map
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
